dgm-lib v2.3.x
 * Bumped to SFML v2.6.1
 * Removed `dgm::AbstractController`
 * Reworked `dgm::Controller`
	* Gamepad deadzones reworked
	* Methods renamed
	* `releaseInput` now affects axii too if you read them via `isInputToggled`
	* Documentation revisited

dgm-lib v2.2.5
 * Added const iterator interface to `dgm::DynamicBuffer`
 * Fixed `dgm::Camera` being positioned to a random position upon construction
	* Now it's center is half of the resolution, so it sees a rectangle defined as `[0, 0, width, height]`

dgm-lib v2.2.4
 * Added method `dgm::ResourceManager::getMutable` so the stored resources can be modified if necessary

dgm-lib v2.2.3
 * Added method `dgm::Path<TileNavPoint>::getLength()`
 * `dgm::TileNavmesh::getPath` was marked deprecated
	* `dgm::TileNavmesh::computePath` which returns `std::optional` should be used instead
 * `dgm::WorldNavmesh::getPath` was marked deprecated
	* `dgm::WorldNavmesh::computePath` which returns `std::optional` should be used instead

dgm-lib v2.2.2
 * Added `dgm::DynamicBuffer::isValidIndex` for testing whether there is something at index
 * Added `dgm::DynamicBuffer::at` which either returns `std::reference_wrapper` for item at index or empty `std::optional`
 * Added `dgm::Path::clone` so the paths can be explicitly copied
 * `dgm::Mesh` was turned into templated `dgm::GenericMesh` where the internal data type can be configured by the template
	* Convenience back-compatible alias of `dgm::Mesh` was also introduced
	* Default constructor is marked `[[deprecated]]`
	* Added convenience constructor for cases where data array should be defaulted
	* `move` methods are `constexpr` and `noexcept`
	* `setVoxelSize(const sf::Vector2u&) is `noexcept`
 * All of `dgm::Object` interface is `noexcept`
	* Also most of the concrete implementations are now `constexpr`
	* All default constructors are marked `[[deprecated]]`
 * Fixed `dgm::SpatialIndex::clear` being in private interface (now public)

dgm-lib v2.2.1